# dlt-streamlit

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  dev-requirements.txt  justfile  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: Welcome.py  pipeline_factory.py  source_factory.py  utils.py
src/pages/: 0_🚰_Pipelines.py  1_🔧_Source_Builder.py  2_📈_View_Data.py
src/yaml_renderer/: __init__.py
src/yaml_renderer/templates/: source.yaml.j2
sub_pages/: _page_base.py  page_1.py  page_2.py  page_main.py  source_builder.py
sub_pages/rest_api/: __init__.py
utils/: utils.py
